[workspace]
members = [
	"bin/node-template/node",
	"bin/node-template/runtime",
	"bin/node-template/pallets/template",
	"bin/node/bench",
	"bin/node/browser-testing",
	"bin/node/cli",
	"bin/node/executor",
	"bin/node/primitives",
	"bin/node/rpc-client",
	"bin/node/rpc",
	"bin/node/runtime",
	"bin/node/testing",
	"bin/utils/subkey",
	"bin/utils/chain-spec-builder",
	"client/api",
	"client/authority-discovery",
	"client/basic-authorship",
	"client/block-builder",
	"client/chain-spec",
	"client/chain-spec/derive",
	"client/cli",
	"client/cli/proc-macro",
	"client/consensus/aura",
	"client/consensus/babe",
	"client/consensus/babe/rpc",
	"client/consensus/common",
	"client/consensus/manual-seal",
	"client/consensus/pow",
	"client/consensus/uncles",
	"client/consensus/slots",
	"client/consensus/epochs",
	"client/db",
	"client/executor",
	"client/executor/common",
	"client/executor/wasmi",
	"client/executor/wasmtime",
	"client/executor/runtime-test",
	"client/finality-grandpa",
	"client/informant",
	"client/light",
	"client/tracing",
	"client/keystore",
	"client/network",
	"client/network/test",
	"client/network-gossip",
	"client/offchain",
	"client/peerset",
	"client/proposer-metrics",
	"client/rpc-servers",
	"client/rpc",
	"client/rpc-api",
	"client/service",
	"client/service/test",
	"client/state-db",
	"client/sync-state-rpc",
	"client/telemetry",
	"client/transaction-pool",
	"client/transaction-pool/graph",
	"utils/prometheus",
	"utils/wasm-builder-runner",
	"frame/assets",
	"frame/aura",
	"frame/atomic-swap",
	"frame/authority-discovery",
	"frame/authorship",
	"frame/babe",
	"frame/balances",
	"frame/benchmarking",
	"frame/collective",
	"frame/contracts",
	"frame/contracts/rpc",
	"frame/contracts/rpc/runtime-api",
	"frame/democracy",
	"frame/elections-phragmen",
	"frame/elections",
	"frame/example",
	"frame/example-offchain-worker",
	"frame/example-parallel",
	"frame/executive",
	"frame/grandpa",
	"frame/identity",
	"frame/im-online",
	"frame/indices",
	"frame/membership",
	"frame/metadata",
	"frame/multisig",
	"frame/nicks",
	"frame/node-authorization",
	"frame/offences",
	"frame/proxy",
	"frame/randomness-collective-flip",
	"frame/recovery",
	"frame/scheduler",
	"frame/scored-pool",
	"frame/session",
	"frame/session/benchmarking",
	"frame/society",
	"frame/staking",
	"frame/staking/reward-curve",
	"frame/staking/fuzzer",
	"frame/sudo",
	"frame/support",
	"frame/support/procedural",
	"frame/support/procedural/tools",
	"frame/support/procedural/tools/derive",
	"frame/support/test",
	"frame/system",
	"frame/system/benchmarking",
	"frame/system/rpc/runtime-api",
	"frame/timestamp",
	"frame/transaction-payment",
	"frame/transaction-payment/rpc",
	"frame/transaction-payment/rpc/runtime-api",
	"frame/treasury",
	"frame/utility",
	"frame/vesting",
	"primitives/allocator",
	"primitives/application-crypto",
	"primitives/application-crypto/test",
	"primitives/authority-discovery",
	"primitives/authorship",
	"primitives/block-builder",
	"primitives/blockchain",
	"primitives/consensus/aura",
	"primitives/consensus/babe",
	"primitives/consensus/common",
	"primitives/consensus/pow",
	"primitives/consensus/vrf",
	"primitives/core",
	"primitives/chain-spec",
	"primitives/database",
	"primitives/debug-derive",
	"primitives/storage",
	"primitives/externalities",
	"primitives/evm",
	"primitives/finality-grandpa",
	"primitives/inherents",
	"primitives/keyring",
	"primitives/keystore",
	"primitives/offchain",
	"primitives/panic-handler",
	"primitives/npos-elections",
	"primitives/npos-elections/fuzzer",
	"primitives/npos-elections/compact",
	"primitives/rpc",
	"primitives/runtime-interface",
	"primitives/runtime-interface/proc-macro",
	"primitives/runtime-interface/test-wasm",
	"primitives/runtime-interface/test-wasm-deprecated",
	"primitives/runtime-interface/test",
	"primitives/serializer",
	"primitives/session",
	"primitives/api",
	"primitives/api/proc-macro",
	"primitives/api/test",
	"primitives/arithmetic",
	"primitives/arithmetic/fuzzer",
	"primitives/io",
	"primitives/runtime",
	"primitives/sandbox",
	"primitives/staking",
	"primitives/std",
	"primitives/version",
	"primitives/state-machine",
	"primitives/tasks",
	"primitives/timestamp",
	"primitives/test-primitives",
	"primitives/transaction-pool",
	"primitives/tracing",
	"primitives/trie",
	"primitives/utils",
	"primitives/wasm-interface",
	"test-utils/client",
	"test-utils/derive",
	"test-utils/runtime",
	"test-utils/runtime/client",
	"test-utils/runtime/transaction-pool",
	"test-utils/test-crate",
	"utils/browser",
	"utils/build-script-utils",
	"utils/fork-tree",
	"utils/frame/benchmarking-cli",
	"utils/frame/frame-utilities-cli",
	"utils/frame/rpc/support",
	"utils/frame/rpc/system",
	"utils/wasm-builder",
]

exclude = [
    "vendor",
]

[profile.dev.package]
aes-soft = { opt-level = 3 }
aesni = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
blake2s_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
evm-core = { opt-level = 3 }
evm-runtime = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
panic = "unwind"
