[package]
name = "watcher"
version = "0.1.0"
authors = ["NoCtrlZ <phantomofrotten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.13.0"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
hex-literal = "0.3.1"
ethereum-types = "0.10.0"
